fix padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,8 @@ i {
 
 .sidebar-content {
     margin-top: 25px;
-    margin-left: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .main-content {
